--- a/PM Notebook Task 2.ipynb
+++ b/PM Notebook Task 2.ipynb
@@ -153,10 +153,7 @@
     "for group in groups:\n",
     "    print(len(group))\n",
     "    \n",
-    "print(len(groups))   \n",
-    "\n",
-    "\n",
-    "    "
+    "print(len(groups))"
    ]
   },
   {
@@ -192,10 +189,7 @@
     "    mins.append(mi)\n",
     "    \n",
     "print(maxs)\n",
-    "print(mins)\n",
-    "\n",
-    "\n",
-    "          "
+    "print(mins)"
    ]
   },
   {
@@ -257,13 +251,13 @@
     {
      "ename": "AttributeError",
      "evalue": "module 'scipy' has no attribute 'stats'",
-     "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
       "\u001b[1;32m<ipython-input-17-6629a95c473e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mdist\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmaxs\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mp\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mscipy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstats\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgenextreme\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mscipy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstats\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgenextreme\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mAttributeError\u001b[0m: module 'scipy' has no attribute 'stats'"
-     ]
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
@@ -475,8 +469,7 @@
     "    if value[1] < mintreshhold: mins.append(value[1])\n",
     "        \n",
     "print(\"maxs = \" + str(maxs))\n",
-    "print(\"mins = \" + str(mins))      \n",
-    "        "
+    "print(\"mins = \" + str(mins))"
    ]
   },
   {
@@ -642,7 +635,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
